# ponder

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
libs/math/: CMakeLists.txt
libs/math/docs/: Boundary.md  Codex.md  Usage.md  audit.txt  deferred.md  open-questions.txt  roadmap.txt
libs/math/docs/examples/: RendererExamples.cpp
libs/math/include/ponder/math/: Angle.hpp  AxisAlignedBox.hpp  CollisionClassification.hpp  Frustum.hpp  Library.hpp  MathError.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Plane.hpp  Quaternion.hpp  Ray.hpp  RayBoxHit.hpp  RayTriangleHit.hpp  Scalar.hpp  Sphere.hpp  Triangle.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Viewport.hpp
libs/math/src/: Library.cpp  MathError.cpp
libs/render/: CMakeLists.txt
libs/render/docs/: Boundary.md  Codex.md  Draw2DPacket.md  Roadmap.md  Verification.md  open-questions-3d.txt  open-questions-ui.txt  open-questions.txt  roadmap.txt
libs/render/include/ponder/render/: Bootstrap.hpp  Library.hpp  RenderError.hpp
libs/render/shaders/: Draw2DRectangleFragment.hlsl  Draw2DRectangleVertex.hlsl  Sentinel.hlsl  Sentinel.i
libs/render/src/: Bootstrap.cpp  Draw2DLayer.cpp  Library.cpp  RenderBootstrapTestAccess.hpp  RenderLiveTestAccess.hpp  VulkanBootstrap.cpp  VulkanBootstrap.hpp  VulkanDiagnostics.hpp  VulkanDraw2DPipeline.cpp  VulkanDraw2DUpload.cpp  VulkanQueueSynchronization.hpp
libs/ui/: CMakeLists.txt
libs/ui/docs/: Boundary.md  Codex.md  PaintCompiler.md  PlatformAdapter.md  future.txt  milestones.txt  open-questions.txt  roadmap.txt
libs/ui/include/ponder/ui/: Color.hpp  (+6 more)
libs/ui/src/: Library.cpp  PaintCompiler.cpp  PaintRecorder.cpp  RectangleRenderer.cpp  RenderIntegration.cpp  RenderIntegrationTopology.cpp
tests/install/render/consumer/: CMakeLists.txt  Main.cpp
tests/install/ui/consumer/: CMakeLists.txt  ExperimentalMain.cpp  HeaderColor.cpp  HeaderError.cpp  HeaderExperimentalRectangleRenderer.cpp  HeaderGeometry.cpp  HeaderLibrary.cpp  HeaderLimits.cpp  HeaderMetrics.cpp  HeaderOutcome.cpp  Main.cpp
tests/unit/: CMakeLists.txt  README.md
tests/unit/chemistry/: CMakeLists.txt  SmokeTests.cpp
tests/unit/compute/: CMakeLists.txt  SmokeTests.cpp
tests/unit/core/: AssertTests.cpp  BuildInfoTests.cpp  CMakeLists.txt  ErrorTests.cpp  HashTests.cpp  IdentifierTests.cpp  LogTests.cpp  NumbersTests.cpp  PonderExceptionTests.cpp  ResultTests.cpp  ScopeExitTests.cpp  SmokeTests.cpp  StringTests.cpp  UuidTests.cpp
tests/unit/core/HeaderSelfContainment/: AssertHeader.cpp  BuildInfoHeader.cpp  HashHeader.cpp  IdentifierHeader.cpp  LibraryHeader.cpp  LogHeader.cpp  NumbersHeader.cpp  PonderExceptionHeader.cpp  ResultHeader.cpp  ScopeExitHeader.cpp  StackTraceHeader.cpp  StringHeader.cpp  UuidHeader.cpp
tests/unit/io/: CMakeLists.txt  PathTests.cpp  SmokeTests.cpp
tests/unit/math/: AngleTests.cpp  ApiContractTests.cpp  CMakeLists.txt  CollisionClassificationTests.cpp  CollisionIntersectionTests.cpp  CollisionMilestoneTests.cpp  CollisionValueTests.cpp  ConsumerLinkTests.cpp  DirectXReferenceTests.cpp  MathErrorTests.cpp  Matrix3x3AlgebraTests.cpp  Matrix4x4AlgebraTests.cpp  MatrixTests.cpp  QuaternionTests.cpp  RayTriangleIntersectionTests.cpp  RendererReadyTests.cpp  ScalarTests.cpp  SmokeTests.cpp  VectorAlgebraTests.cpp  VectorTests.cpp  ViewportTests.cpp
tests/unit/math/HeaderSelfContainment/: AngleHeader.cpp  AxisAlignedBoxHeader.cpp  CollisionClassificationHeader.cpp  FrustumHeader.cpp  MathErrorHeader.cpp  Matrix3x3Header.cpp  Matrix4x4Header.cpp  PlaneHeader.cpp  QuaternionHeader.cpp  RayBoxHitHeader.cpp  RayHeader.cpp  RayTriangleHitHeader.cpp  ScalarHeader.cpp  SphereHeader.cpp  TriangleHeader.cpp  Vector2Header.cpp  Vector3Header.cpp  Vector4Header.cpp  ViewportHeader.cpp
tests/unit/platform/: CMakeLists.txt  DialogTests.cpp  DisplayTests.cpp  FormattingTests.cpp  GeometryTests.cpp  HintManagerTests.cpp  IdentifierTests.cpp  KeyboardTests.cpp  MouseTests.cpp  NativeWindowTests.cpp  PlatformCoverageAuditTests.cpp  PlatformErrorTests.cpp  PlatformEventTests.cpp  PlatformRuntimeTests.cpp  PlatformRuntimeTypesTests.cpp  ProcessBackendTests.cpp  ProcessTestHelper.cpp  ProcessTests.cpp  RuntimeChildRegistryTests.cpp  SdlErrorTests.cpp  SdlEventTranslatorTests.cpp  SmokeTests.cpp  TextInputTests.cpp  TimingTests.cpp  WindowBackendTests.cpp  WindowGraphicsTests.cpp  WindowStateTests.cpp  WindowTypesTests.cpp
tests/unit/platform/HeaderSelfContainment/: DialogHeader.cpp  DisplayHeader.cpp  GeometryHeader.cpp  HintManagerHeader.cpp  IdentifiersHeader.cpp  KeyboardHeader.cpp  MouseHeader.cpp  NativeWindowHeader.cpp  PlatformErrorHeader.cpp  PlatformEventHeader.cpp  PlatformRuntimeHeader.cpp  ProcessHeader.cpp  TextInputHeader.cpp  TimingHeader.cpp  WindowGraphicsHeader.cpp  WindowHeader.cpp  WindowStateHeader.cpp
tests/unit/plugin_sdk/: CMakeLists.txt  SmokeTests.cpp
tests/unit/project/: CMakeLists.txt  SmokeTests.cpp
tests/unit/render/: BootstrapValueTests.cpp  CMakeLists.txt  Draw2DPacketTests.cpp  Draw2DRectangleShaderInterfaceTests.cpp  LifetimeContractDeathTests.cpp  RenderApiTraitsTests.cpp  RenderErrorTests.cpp  SmokeTests.cpp  ThreadingHandoffTests.cpp  VulkanBootstrapTests.cpp  VulkanQueueSynchronizationTests.cpp
tests/unit/render/HeaderSelfContainment/: BootstrapHeader.cpp  Draw2DLayerHeader.cpp  Draw2DPacketHeader.cpp  Draw2DRectangleShaderInterfaceHeader.cpp  RenderErrorHeader.cpp
tests/unit/render/PublicConsumer/: RenderPublicConsumer.cpp
tests/unit/scientific_data/: CMakeLists.txt  SmokeTests.cpp
tests/unit/ui/: CMakeLists.txt  CpuPacketVerificationTests.cpp  FoundationValueTests.cpp  PaintCompilerTests.cpp  PaintRecorderTests.cpp  RenderIntegrationTopology.cpp  SmokeTests.cpp
tests/unit/ui/HeaderSelfContainment/: ColorHeader.cpp  ErrorHeader.cpp  ExperimentalRectangleRendererHeader.cpp  GeometryHeader.cpp  LibraryHeader.cpp  LimitsHeader.cpp  MetricsHeader.cpp  OutcomeHeader.cpp
tests/unit/workflow/: CMakeLists.txt  SmokeTests.cpp
(+257 files in other folders)
