add_subdirectory(core)
add_subdirectory(math)
add_subdirectory(chemistry)
add_subdirectory(scientific_data)
add_subdirectory(project)
add_subdirectory(workflow)
add_subdirectory(compute)
add_subdirectory(io)
add_subdirectory(render)
add_subdirectory(platform)
add_subdirectory(ui)
add_subdirectory(plugin_sdk)